--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "name": "spratify",
   "version": "1.0.0",
+  "main": "server.js",
   "license": "MIT",
   "dependencies": {
-    "eslint": "^6.8.0"
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "eslint": "^6.8.0",
+    "express": "^4.17.1",
+    "request": "^2.88.2"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && yarn && yarn run build"
   },
   "engines": {
     "node": "12.x"
